--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "spomky-labs/otphp": "^8.3",
         "endroid/qrcode": "^1.9",
         "ldaptools/ldaptools": "^0.24.0",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "phpmailer/phpmailer": "^5.2"
     },
     "authors": [
         {
