--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "endroid/qrcode": "^1.9",
         "ldaptools/ldaptools": "^0.24.0",
         "guzzlehttp/guzzle": "^6.2",
-        "phpmailer/phpmailer": "^5.2"
+        "phpmailer/phpmailer": "^5.2",
+        "christian-riesen/base32": "^1.3"
     },
     "authors": [
         {
