--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "phpmailer/phpmailer": "^5.2",
         "christian-riesen/base32": "^1.3"
     },
+    "license": "MPL-2.0",
     "authors": [
         {
             "name": "Skylar Ittner",
