--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
         "catfan/medoo": "^1.5",
         "spomky-labs/otphp": "^8.3",
         "endroid/qr-code": "^3.2",
-        "ldaptools/ldaptools": "^0.24.0",
         "guzzlehttp/guzzle": "^6.2",
         "phpmailer/phpmailer": "^5.2",
-        "christian-riesen/base32": "^1.3"
+        "christian-riesen/base32": "^1.3",
+        "mibe/feedwriter": "^1.1"
     },
     "license": "MPL-2.0",
     "authors": [
